# CppPractice

./: CMakeLists.txt  README.md
CartesianVector/: CMakeLists.txt  CartesianVector.hpp
CartesianVector/tests/: CMakeLists.txt  test_CartesianVector_library.cpp
CppPractice/: CartesianVector.cpp  CartesianVector.hpp  EllipsoidIntersect.cpp  EllipsoidIntersect.hpp  FindSignAndMagnitude.cpp  FindSignAndMagnitude.hpp  LRUCache.cpp  LRUCache.hpp  SentenceParser.cpp  Shape.cpp  Shape.hpp  TemplatedFactorial.cpp  TemplatedFactorial.hpp  VariadicSum.cpp  VariadicSum.hpp  VectorCosine.cpp  VectorCosine.hpp  main.cpp
CppPractice.xcodeproj/: project.pbxproj
CppPractice.xcodeproj/xcuserdata/justinowen.xcuserdatad/xcschemes/: CppPractice.xcscheme  xcschememanagement.plist
CppSciComp/CppSciComp/: Book.cpp  Book.hpp  ComplexNumber.cpp  ComplexNumber.hpp  UseBookClass.cpp  UseComplexNumberClass.cpp
CppSciComp/CppSciComp.xcodeproj/: project.pbxproj
CppSciComp/CppSciComp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CppSciComp/CppSciComp.xcodeproj/xcuserdata/justinowen.xcuserdatad/xcschemes/: xcschememanagement.plist
ExampleTest/: CMakeLists.txt  example_library.cpp  example_library.h  math_library.h
ExampleTest/tests/: CMakeLists.txt  test_example_library.cpp  test_math_library.cpp
Shapes/: CMakeLists.txt  Shape.cpp
Shapes/tests/: CMakeLists.txt  test_Shapes_library.cpp
